# RAG-cross-RL

./: .gitignore  README.md  milestones.md  plan.md  pyproject.toml
data/: demo_index.pkl  demo_memory_bank.jsonl
demo/: demo_v0.py
docs/: demo_v0_notes.md
libero/: __init__.py
pdf/: main.tex  references.bib
pdf/sections/: 01_overview.tex  02_literature.tex  03_method.tex  04_plan.tex
slide/apr1st/: main.tex  script_vi.md
